# mcs

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  release.ps1  release.sh
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
src/: commands.rs  config.rs  fabric.rs  forge.rs  main.rs  paper.rs  prompt.rs  setup.rs  spigot.rs  vanilla.rs
