[package]
name = "mcs"
version = "0.1.0"
edition = "2024"
authors = ["Adrian"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
inquire = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
